# covercraft-ai

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  adk.yaml  pyproject.toml
.claude/: settings.local.json
cover_letter_agent/: __init__.py  agent.py  schemas.py
cover_letter_agent/sub_agents/: cover_letter_generator.py  experience_researcher.py  job_researcher.py  resume_analyzer.py
cover_letter_agent/tools/: pdf_reader.py  save_cover_letter.py  save_cover_letter_pdf.py  url_extractor.py  web_research.py
covercraft-ai/: schemas.py
covercraft-ai/sub_agents/: job_researcher.py  resume_analyzer.py
covercraft-ai/tools/: save_cover_letter_pdf.py  web_research.py
resume/: README.md
